@@ -117,7 +117,7 @@ public class ShoppingListItemEditViewModel extends AndroidViewModel {
       this.barcodes = barcodes;
       this.quantityUnits = qUs;
       this.unitConversions = conversions;
-      formData.getProductsLive().setValue(products);
+      formData.getProductsLive().setValue(getActiveProductsOnly(products));
       if (!isActionEdit) {
         formData.getShoppingListLive().setValue(getLastShoppingList());
       }
@@ -151,7 +151,7 @@ public class ShoppingListItemEditViewModel extends AndroidViewModel {
           }
         }), dlHelper.updateProducts(dbChangedTime, products -> {
           this.products = products;
-          formData.getProductsLive().setValue(products);
+          formData.getProductsLive().setValue(getActiveProductsOnly(products));
         }), dlHelper.updateQuantityUnitConversions(
             dbChangedTime, conversions -> this.unitConversions = conversions
         ), dlHelper.updateProductBarcodes(
@@ -397,6 +397,16 @@ public class ShoppingListItemEditViewModel extends AndroidViewModel {
       showBottomSheet(new InputProductBottomSheet(), bundle);
     }
     return product;
+  }
+
+  private ArrayList<Product> getActiveProductsOnly(ArrayList<Product> allProducts) {
+    ArrayList<Product> activeProductsOnly = new ArrayList<>();
+    for (Product product : allProducts) {
+      if (product.isActive()) {
+        activeProductsOnly.add(product);
+      }
+    }
+    return activeProductsOnly;
   }
 
   private QuantityUnit getQuantityUnit(int id) {
